--- a/packages/json_rpc_codegen_builder/pubspec.yaml
+++ b/packages/json_rpc_codegen_builder/pubspec.yaml
@@ -13,14 +13,19 @@ dependencies:
   build_config: ^1.1.1
   code_builder: ^4.7.0
   json_rpc_codegen: ^1.0.0
-  meta: ^1.10.0
+  meta: ^1.9.1
   source_gen: ^1.4.0
   source_helper: ^1.3.4
 
 dev_dependencies:
   build_runner: ^2.4.6
-  build_test: ^2.2.0
+  build_test: ^2.2.1
   dart_pre_commit: ^5.2.1
   dart_test_tools: ^5.4.0
   source_gen_test: ^1.0.6
-  test: ^1.21.0
+  test: ^1.24.6
+
+dart_pre_commit:
+  pull-up-dependencies:
+    allowed:
+      - meta
