--- a/packages/json_rpc_codegen_builder/pubspec.yaml
+++ b/packages/json_rpc_codegen_builder/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   build: ^2.4.1
   build_config: ^1.1.1
   code_builder: ^4.7.0
+  collection: ^1.18.0
   json_rpc_codegen: ^1.0.0
   meta: ^1.9.1
   source_gen: ^1.4.0
