--- a/packages/json_rpc_codegen_builder/build.yaml
+++ b/packages/json_rpc_codegen_builder/build.yaml
@@ -17,5 +17,5 @@ targets:
             - lib
             - test
           include:
-            - test/apis/**
+            - test/integration/models/**
             - example/**
