--- a/.github/workflows/json_rpc_codegen_ci.yaml
+++ b/.github/workflows/json_rpc_codegen_ci.yaml
@@ -16,6 +16,7 @@ jobs:
       workingDirectory: packages/json_rpc_codegen
       buildRunner: false
       unitTestPaths: ""
+      panaScoreThreshold: 10
   cd:
     name: CD
     uses: Skycoder42/dart_test_tools/.github/workflows/release.yml@main
