--- a/packages/json_rpc_codegen/pubspec.yaml
+++ b/packages/json_rpc_codegen/pubspec.yaml
@@ -16,6 +16,8 @@ dev_dependencies:
   custom_lint: ^0.5.3
   dart_pre_commit: ^5.2.1
   dart_test_tools: ^5.4.0
+  mocktail: ^1.0.1
+  test: ^1.24.8
 
 dart_pre_commit:
   pull-up-dependencies:
