--- a/packages/json_rpc_codegen_builder/pubspec.yaml
+++ b/packages/json_rpc_codegen_builder/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   build: ^2.4.1
   build_config: ^1.1.1
   code_builder: ^4.7.0
-  collection: ^1.18.0
+  collection: ^1.17.2
   json_rpc_codegen: ^1.0.0
   meta: ^1.9.1
   source_gen: ^1.4.0
@@ -21,12 +21,16 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.6
   build_test: ^2.2.1
+  custom_lint: ^0.5.4
   dart_pre_commit: ^5.2.1
   dart_test_tools: ^5.4.0
+  mocktail: ^1.0.1
   source_gen_test: ^1.0.6
-  test: ^1.24.6
+  test: ^1.24.8
 
 dart_pre_commit:
   pull-up-dependencies:
     allowed:
+      - analyzer
+      - collection
       - meta
