--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/alpine
 {
 	"name": "Dart (Stable)",
-	"image": "skycoder42/devcontainers-dart:latest",
+	"image": "skycoder42/devcontainers-flutter:latest",
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -28,5 +28,5 @@
 		},
 		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
 	},
-	"postCreateCommand": "melos run pre-commit:init"
+	"postCreateCommand": "dart pub upgrade && melos run pre-commit:init"
 }
