--- a/packages/json_rpc_codegen_builder/pubspec.yaml
+++ b/packages/json_rpc_codegen_builder/pubspec.yaml
@@ -7,6 +7,11 @@ repository: https://github.com/Skycoder42/json_rpc_codegen.git
 environment:
   sdk: ^3.1.0
 
+platforms:
+  linux:
+  macos:
+  windows:
+
 dependencies:
   analyzer: ^6.2.0
   build: ^2.4.1
@@ -21,12 +26,12 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.6
   build_test: ^2.2.1
-  custom_lint: ^0.5.4
+  custom_lint: ^0.5.5
   dart_pre_commit: ^5.2.1
   dart_test_tools: ^5.4.0
   mocktail: ^1.0.1
   source_gen_test: ^1.0.6
-  test: ^1.24.8
+  test: ^1.24.9
 
 dart_pre_commit:
   pull-up-dependencies:
