--- a/.github/workflows/json_rpc_codegen_builder_ci.yaml
+++ b/.github/workflows/json_rpc_codegen_builder_ci.yaml
@@ -17,6 +17,7 @@ jobs:
       buildRunner: true
       buildRunnerArgs: --delete-conflicting-outputs
       unitTestPaths: test/unit
+      minCoverage: 0
       integrationTestPaths: test/integration
   cd:
     name: CD
