--- a/packages/json_rpc_codegen_builder/build.yaml
+++ b/packages/json_rpc_codegen_builder/build.yaml
@@ -2,7 +2,7 @@ builders:
   json_rpc_codegen_builder:
     import: "package:json_rpc_codegen_builder/json_rpc_codegen_builder.dart"
     builder_factories: ["jsonRpcCodegenBuilder"]
-    build_extensions: { ".dart": ["settings.g.part"] }
+    build_extensions: { ".dart": ["json_rpc_codegen.g.part"] }
     auto_apply: dependents
     build_to: cache
     applies_builders: ["source_gen|combining_builder"]
