--- a/packages/json_rpc_codegen_builder/pubspec.yaml
+++ b/packages/json_rpc_codegen_builder/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   collection: ^1.18.0
   json_rpc_codegen: ^1.0.0
   meta: ^1.10.0
-  source_gen: ^1.4.0
+  source_gen: ^1.5.0
   source_helper: ^1.3.4
 
 dev_dependencies:
@@ -29,6 +29,7 @@ dev_dependencies:
   custom_lint: ^0.5.7
   dart_pre_commit: ^5.2.1
   dart_test_tools: ^5.5.0
+  json_rpc_2: ^3.0.2
   mocktail: ^1.0.1
   source_gen_test: ^1.0.6
   test: ^1.24.9
