--- a/.github/workflows/json_rpc_codegen_builder_cd.yaml
+++ b/.github/workflows/json_rpc_codegen_builder_cd.yaml
@@ -6,6 +6,16 @@ on:
       - "json_rpc_codegen_builder-v*"
 
 jobs:
+  ci:
+    name: CI (pub.dev)
+    uses: Skycoder42/dart_test_tools/.github/workflows/dart.yml@main
+    with:
+      workingDirectory: packages/json_rpc_codegen_builder
+      buildRunner: true
+      buildRunnerArgs: --delete-conflicting-outputs
+      unitTestPaths: test/unit
+      minCoverage: 0
+      integrationTestPaths: test/integration
   publish:
     name: Publish
     uses: Skycoder42/dart_test_tools/.github/workflows/publish.yml@main
